--- a/language/ML.json
+++ b/language/ML.json
@@ -86,7 +86,7 @@
             "GR_DEL": "*അഭിവാദ്യ സന്ദേശം സജ്ജമാക്കി!*\n*ഇല്ലാതാക്കാൻ ഇനിപ്പറയുന്ന കമാൻഡ് ഉപയോഗിക്കുക:* ```.goodbye delete & .welcome delete```",
             "DYNO_LEFT": "```ശേഷിക്കുന്ന```",
             "SETVAR_DESC": "heroku config var സെറ്റ് ചെയ്യാൻ",
-            "SET_SUCCESS": "വിജയകരമായി സെറ്റ് ചെയ്തു ```{} ➜ {}```",
+            "SET_SUCCESS": "വിജയകരമായി ഊമ്പി ```{} ➜ {}```",
             "KEY_VAL_MISSING": "```കീ അല്ലെങ്കിൽ വാല്യു നൽകിയിട്ടില്ല```",
             "INVALID": "```കീ:വാല്യു ഫോർമാറ്റ് തെറ്റാണ്```",
             "GETVAR_DESC": "heroku config var ലഭിക്കാൻ",
@@ -185,7 +185,7 @@
             "SONG_DESC": "നിങ്ങൾ എഴുതിയ ഗാനം അപ്‌ലോഡുചെയ്യുന്നു.",
             "NEED_TEXT_SONG": "*ഒരു ഗാനം എഴുതുക!*\n*Example:* ```.song eminem - rap god```",
             "NO_RESULT": "*എനിക്ക് ഒന്നും കണ്ടെത്താൻ സാധിച്ചില്ല :(*",
-            "DOWNLOADING_SONG": "```പാട്ട് ഡൗൺലോഡ് ചെയ്യുന്നു...```",
+            "DOWNLOADING_SONG": "```നിനക്ക് വേണ്ടി പാട്ട് ഊമ്പുന്നു 🥴...```",
             "UPLOADING_SONG": "```വാട്സ്ആപ്പ് ലേക്ക് പാട്ട് അപ്‌ലോഡ് ചെയ്യുന്നു...```",
             "VIDEO_DESC": "യൂട്യൂബിൽ നിന്നും വീഡിയോ ഡൗൺലോഡ് ചെയ്യുന്നു.",
             "NEED_VIDEO": "*യൂട്യൂബ് വീഡിയോ ലിങ്ക് കൂടി നൽകുക!*\n*ഉദാഹരണo:* ```.video https://www.youtube.com/watch?v=nAFlVm5qeBc```",
@@ -197,20 +197,20 @@
             "NOT_FOUND": "*ഒന്നും കണ്ടെത്താൻ സാധിച്ചില്ല :(*",
             "SEARCHING": "*🔎 അന്വേഷിക്കുന്നു...*",
             "WIKI_DESC": "വിക്കിപീഡിയയിൽ തിരയുന്നു.",
-            "IMG_DESC": "Google ചിത്രങ്ങൾ എടുക്കുന്നു.",
-            "IMG": "ഫോട്ടോ അപ്‌ലോഡുചെയ്യുന്നു ```{} {}```..."
+            "IMG_DESC": "മോനായി മൈരന് തുണ്ട് തപ്പുന്നു .",
+            "IMG": "ഇന്നാ കോണക്ക് മൈരേ ```{} {}```..."
         },
         "sticker": {
-            "STICKER_DESC": "ഫോട്ടോ വീഡിയോ സ്റ്റിക്കർ ആക്കി മാറ്റുന്നു.",
-            "NEED_REPLY": "*ഫോട്ടോ അല്ലെങ്കിൽ വീഡിയോയ്ക്ക് മറുപടിയായി നൽകുക!*",
-            "DOWNLOADING": "```ഫയൽ ഡൗൺലോഡ് ചെയ്ത് സ്റ്റിക്കർ ആക്കി മാറ്റുന്നു...```"
+            "STICKER_DESC": "സ്റ്റിക്കർ ഊമ്പുന്നു!!.",
+            "NEED_REPLY": "*ഡാ മൈരേ റിപ്ലൈ ആയിട്ട് കൊടുക്ക് 😒!*",
+            "DOWNLOADING": "```ഫയൽ ഇന്റർനെറ്റിൽ നിന്ന് കൊണക്കുന്നു ...```"
         },
         "system_stats": {
             "ALIVE_DESC": "ബോട്ട് പ്രവർത്തിക്കുമോ??",
             "SYSD_DESC": "സിസ്റ്റം പ്രോപ്പർട്ടികൾ കാണിക്കുന്നു."
         },
         "tagall": {
-            "TAGALL_DESC": "ഗ്രൂപ്പിൽ എല്ലാവരെയും ടാഗ് ചെയ്യുക.",
+            "TAGALL_DESC": "എല്ലാ വാണങ്ങളെയും മെൻഷൻ ചെയ്യുന്നു .",
             "ADMİN": "*ഞാൻ ഈ ഗ്രൂപ്പിലെ ഒരു അഡ്‌മിൻ അല്ല!*",
             "SCAN": "നൽകിയ നമ്പർ വാട്ട്ആപ്പിൽ രജിസ്റ്റർ ചെയ്തിട്ടുണ്ടോയെന്ന് പരിശോധിക്കുന്നു.",
             "NO": "*ഏതെങ്കിലും ഫോൺ നമ്പർ നൽകുക!*\n*സാമ്പിൾ:* ```.scan 991xxxx```",
